--- a/Parte_2_Exploracion_y_Analisis_de_Datos.ipynb
+++ b/Parte_2_Exploracion_y_Analisis_de_Datos.ipynb
@@ -2154,7 +2154,7 @@
         "# con el fin de seguir el tratamiento en el siguiente notebook (Parte 3). \n",
         "# Se guarda el fichero wineX3.csv en nuestro directorio local:\n",
         "\n",
-        "wineX.to_csv(\"/home/dsc/Data/wineX3.csv\")\n",
+        "wineX.to_csv(\"/home/dsc/Data/wineX3.csv\", index=False)\n",
         "\n"
       ],
       "execution_count": 0,
