--- a/Parte_3_Entrenamiento_del_Modelo.ipynb
+++ b/Parte_3_Entrenamiento_del_Modelo.ipynb
@@ -1551,9 +1551,7 @@
       "source": [
         "**Comentarios**: Las características que contribuyen más a la calidad del vino incluyen el alcohol (el más alto), seguido de la ácidez volátil, los sulfatos, y la densidad. Estos resultados concuerdan con los análisis previos que observamos anteriormente.\n",
         "\n",
-        "De ahora en adelante, usaremos solo estas 8 variables y eliminaremos las variables menos importantes del modelo.\n",
-        "\n",
-        "*NOTA IMPORTANTE: Cuando se ha probado el paso anterior paso en la máquina virtual, por algún error del sistema el 'Alcohol' no aparece como una variable importante, y en vez de ello aparece la 'Ácidez Fija'. Si le aparece este mismo error recomiendo que este notebook lo ejecute desde Google Colab, para evitar que los resultados se vean afectados. De lo contrario puede continuar con el código a continuación.*\n"
+        "De ahora en adelante, usaremos solo estas 8 variables y eliminaremos las variables menos importantes del modelo."
       ]
     },
     {
@@ -1770,6 +1768,19 @@
       "source": [
         "Dividiremos nuevamente nuestro dataset aplicando SMOTE utilizando el X_train1 y y_train1 del paso anterior:"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bczx-DOLW5Ih",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install imblearn"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
